Put email address in quotes

--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ avatar: https://raw.githubusercontent.com/semiupsidedown/semiupsidedown.github.i
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
-  email: s.e.chadburn@exeter.ac.uk
+  email: 's.e.chadburn@exeter.ac.uk'
   facebook:
   flickr:
   github: #barryclark/jekyll-now
