--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: Sarah Chadburn
 
 # Short bio or description (displayed in the header)
-description: Research Scientist from Sad face place
+description: Research Scientist from Exeter, UK
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://raw.githubusercontent.com/semiupsidedown/semiupsidedown.github.io/master/images/profile_pic.png
