Try out Midnight theme

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,7 @@
 #
 # This file contains configuration flags to customize your site
 #
+theme: jekyll-theme-midnight
 
 # Name of your site (displayed in the header)
 name: Sarah Chadburn
